syntax = "proto3";

package standard;

// 状态
enum State {
  UNKNOWN = 0 ;   // 未知
  SUCCESS = 1 ;   // 成功
  FAILURE = 2 ;   // 失败

  SERVICE_ERROR = 3 ;   // 服务错误
  PARAMS_INVALID = 4 ;   // 参数不合法
  ILLEGAL_REQUEST = 5 ;   // 非法请求

  USER_NOT_EXIST = 8 ;   // 用户不存在
  LABEL_NOT_EXIST = 6 ;   // 标签不存在
  GROUP_NOT_EXIST = 7 ;   // 分组不存在

  USER_ALREADY_EXISTS = 9 ;   // 用户已经存在
  LABEL_ALREADY_EXISTS = 11 ;   // 标签已经存在
  GROUP_ALREADY_EXISTS = 12 ;   // 分组已经存在

  USER_ALREADY_DELETE = 14 ;   // 用户已经删除
  LABEL_ALREADY_DELETE  = 15 ;  // 标签已经删除
  GROUP_ALREADY_DELETE  = 16 ;   // 分组已经删除

  DB_OPERATION_FATLURE = 13 ;    // 数据库操作失败
}


// Group 组
message Group {
  int64 ID = 1 ;
  string Name = 2 ;
	string Category = 3 ;
  string State = 4 ;
  string Description = 5 ;
  string CreatedTime = 6 ;
  string UpdatedTime = 7 ;
  string DeletedTime = 8 ;
}

// Label 标签
message Label {
  int64 ID = 1 ;
  string Name = 2 ;
	string Category = 3 ;
	string State = 4 ;
  string Value = 5 ;
  string CreatedTime = 6 ;
  string UpdatedTime = 7 ;
  string DeletedTime = 8 ;
}

// User 用户
message User {
  int64 ID = 1 ;
  string Category = 2 ;
  string Avatar = 3 ;
  int64 Inviter = 4 ;
	string Nickname = 5 ;
	string Username = 6 ;
  string Password = 7 ;
  string CreatedTime = 8 ;
  string UpdatedTime = 9 ;
  string DeletedTime = 10 ;
}

message CreateUserRequest {
  string Category = 1 ;
  int64 Inviter = 3 ;
	string Nickname = 4 ;
	string Username = 5 ;
  string Password = 6 ;
}

message CreateUserResponse {
  State  State = 1 ;
  string Message = 2 ;
  User Data = 3;
}

message QueryUsersRequest {
  int64 Page = 1 ;
  int64 Limit = 2 ;
}

message QueryUsersResponse {
  State  State = 1 ;
  string Message = 2 ;
  int64 totalPage = 3 ;
  int64 currentPage = 4 ;
  repeated User Data = 5 ;
}

message QueryUserByIDRequest {
  int64 ID = 1 ;
}

message QueryUserByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
  User   Data = 3 ;
}

message QueryUsersByInviterRequest {
  int64 Inviter = 1 ;
  int64 Page = 2 ;
  int64 Limit = 3 ;
}

message QueryUsersByInviterResponse {
  State  State = 1 ;
  string Message = 2 ;
  int64 totalPage = 3 ;
  int64 currentPage = 4 ;
  repeated User Data = 5 ;
}

message QueryUserByUsernameRequest{
  string Username = 1 ;
}

message QueryUserByUsernameResponse{
  State  State = 1 ;
  string Message = 2 ;
  User   Data = 3 ;
}

message DeleteUserByIDRequest {
  int64 ID = 1 ;
}

message DeleteUserByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}
// ===== //
message UpdateUserCategoryByIDRequest {
  int64 ID = 1 ;
  string Category = 2 ;
}
message UpdateUserCategoryByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}
message UpdateUserAvatarByIDRequest {
  int64 ID = 1 ;
  string Avatar = 2 ;
}
message UpdateUserAvatarByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}
message UpdateUserInviterByIDRequest {
  int64 ID = 1 ;
  int64 Inviter = 2 ;
}
message UpdateUserInviterByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}
message UpdateUserNicknameByIDRequest {
  int64 ID = 1 ;
  string Nickname = 2 ;
}
message UpdateUserNicknameByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}
// 

message UpdateUserPasswordByIDRequest {
  int64 ID = 1 ;
  string Password = 2 ;
}

message UpdateUserPasswordByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message VerifyUserPasswordByIDRequest {
  int64 ID = 1 ;
  string Password = 2 ;
}

message VerifyUserPasswordByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message VerifyUserPasswordByUsernameRequest {
  string Username = 1 ;
  string Password = 2 ;
}

message VerifyUserPasswordByUsernameResponse {
  State  State = 1 ;
  string Message = 2 ;
}

// 标签操作
message CreateLabelRequest {
  string Name = 1 ;
	string Category = 2 ;
	string State = 3 ;
  string Value = 4 ;
}

message CreateLabelResponse {
  State  State = 1 ;
  string Message = 2 ;
  Label Data = 3;
}

// 给指定用户创建标签
message CreateLabelForUserRequest {
  int64 UserID = 1 ;
  string Name = 2 ;
	string Category = 3 ;
	string State = 4 ;
  string Value = 5 ;
}

message CreateLabelForUserResponse {
  State  State = 1 ;
  string Message = 2 ;
  Label Data = 3;
}

message QueryLabelsRequest {
  int64 Page = 1 ;
  int64 Limit = 2 ;
}

message QueryLabelsResponse {
  State  State = 1 ;
  string Message = 2 ;
  int64 totalPage = 3 ;
  int64 currentPage = 4 ;
  repeated Label Data = 5 ;
}

message QueryLabelByIDRequest {
  int64 ID = 1 ;
}

message QueryLabelByIDResponse {
  State State = 1 ; // 状态
  string Message = 2 ;
  Label Data = 3 ;
}

message UpdateLabelNameByIDRequest {
  int64 ID = 1 ;
	string Name = 2 ;
}

message UpdateLabelNameByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message UpdateLabelCategoryByIDRequest {
  int64 ID = 1 ;
	string Category = 2 ;
}

message UpdateLabelCategoryByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message UpdateLabelStateByIDRequest {
  int64 ID = 1 ;
  string State = 2 ;
}

message UpdateLabelStateByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message UpdateLabelValueByIDRequest {
  int64 ID = 1 ;
  string Value = 2 ;
}

message UpdateLabelValueByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message DeleteLabelByIDRequest {
  int64 ID = 1 ;
}

message DeleteLabelByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message AddLabelToUserByIDRequest {
  int64 ID = 1 ;
  int64 UserID = 2 ; // 添加标签给用户 谓语是用户
}

message AddLabelToUserByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message RemoveLabelFromUserByIDRequest {
  int64 ID = 1 ;
  int64 LabelID = 2 ; // 从用户身上撕下标签 所以谓语是标签
}

message RemoveLabelFromUserByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

// 组操作
message CreateGroupRequest {
  string Name = 1 ;
	string Category = 2 ;
  string State = 3 ;
  string Description = 4 ;
}

message CreateGroupResponse {
  State  State = 1 ;
  string Message = 2 ;
  Group Data = 3;
}

message QueryGroupsRequest {
  int64 Page = 1 ;
  int64 Limit = 2 ;
}
message QueryGroupsResponse {
  State  State = 1 ;
  string Message = 2 ;
  int64 totalPage = 3 ;
  int64 currentPage = 4 ;
  repeated Group Data = 5 ;
}

message QueryGroupByIDRequest {
  int64 ID = 1 ;
}

message QueryGroupByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
  Group  Data = 3 ;
}

message UpdateGroupNameByIDRequest {
  int64 ID = 1 ;
  string Name = 2 ;
}

message UpdateGroupNameByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message UpdateGroupCategoryByIDRequest {
  int64 ID = 1 ;
	string Category = 2 ;
}

message UpdateGroupCategoryByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message UpdateGroupStateByIDRequest {
  int64 ID = 1 ;
  string State = 2 ;
}

message UpdateGroupStateByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message UpdateGroupDescriptionByIDRequest {
  int64 ID = 1 ;
  string Description = 2 ;
}

message UpdateGroupDescriptionByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message DeleteGroupByIDRequest {
  int64 ID = 1 ;
}

message DeleteGroupByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message AddUserToGroupByIDRequest {
  int64 ID = 1 ;
  int64 GroupID = 2 ; // 添加用户到组 组是谓语
}

message AddUserToGroupByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

message RemoveUserFromGroupByIDRequest {
  int64 ID = 1 ;
  int64 UserID = 2 ; // 从组里移除用户 用户是谓语
}

message RemoveUserFromGroupByIDResponse {
  State  State = 1 ;
  string Message = 2 ;
}

service Account {
  // 用户操作
  rpc CreateUser(CreateUserRequest)returns(CreateUserResponse){} // 创建一个用户
  rpc QueryUsers(QueryUsersRequest)returns(QueryUsersResponse){} // 查询用户
  rpc QueryUserByID(QueryUserByIDRequest)returns(QueryUserByIDResponse){} // 通过 ID 查询
  rpc QueryUsersByInviter(QueryUsersByInviterRequest)returns(QueryUsersByInviterResponse){} // 通过 Inviter 查询相关用户
  rpc DeleteUserByID(DeleteUserByIDRequest)returns(DeleteUserByIDResponse){} // 删除用户
  rpc QueryUserByUsername(QueryUserByUsernameRequest)returns(QueryUserByUsernameResponse){} // 通过 用户名 查询
  rpc UpdateUserCategoryByID(UpdateUserCategoryByIDRequest)returns(UpdateUserCategoryByIDResponse){} // 根据 ID 更新 Category
  rpc UpdateUserAvatarByID(UpdateUserAvatarByIDRequest)returns(UpdateUserAvatarByIDResponse){} // 根据 ID 更新 Avatar
  rpc UpdateUserInviterByID(UpdateUserInviterByIDRequest)returns(UpdateUserInviterByIDResponse){} // 根据 ID 更新 Inviter
  rpc UpdateUserNicknameByID(UpdateUserNicknameByIDRequest)returns(UpdateUserNicknameByIDResponse){} // 根据 ID 更新 Nickname
  rpc UpdateUserPasswordByID(UpdateUserPasswordByIDRequest)returns(UpdateUserPasswordByIDResponse){} // 更新用户密码
  rpc VerifyUserPasswordByID(VerifyUserPasswordByIDRequest)returns(VerifyUserPasswordByIDResponse){} // 验证密码
  rpc VerifyUserPasswordByUsername(VerifyUserPasswordByUsernameRequest)returns(VerifyUserPasswordByUsernameResponse){} // 验证密码

  // 标签操作 标签用来处理其他额外的用户数据、例如一些地址 手机 邮箱等信息
  // 创建一个标签 然后分配给一个用户 多个用户可以共享同一个标签（共有数据）
  rpc QueryLabels(QueryLabelsRequest)returns(QueryLabelsResponse){} // 查询全部分组
  rpc CreateLabel(CreateLabelRequest)returns(CreateLabelResponse){} // 根据 ID 查询标签
  rpc CreateLabelForUser(CreateLabelForUserRequest)returns(CreateLabelForUserResponse){} // 给指定用户创建标签
  rpc QueryLabelByID(QueryLabelByIDRequest)returns(QueryLabelByIDResponse){} // 根据 ID 查询标签
  rpc DeleteLabelByID(DeleteLabelByIDRequest)returns(DeleteLabelByIDResponse){} // 根据 ID 删除标签
  rpc UpdateLabelNameByID(UpdateLabelNameByIDRequest)returns(UpdateLabelNameByIDResponse){} // 根据 ID 更新标签类别
  rpc UpdateLabelCategoryByID(UpdateLabelCategoryByIDRequest)returns(UpdateLabelCategoryByIDResponse){} // 根据 ID 更新标签类别
  rpc UpdateLabelStateByID(UpdateLabelStateByIDRequest)returns(UpdateLabelStateByIDResponse){} // 根据 ID 更新标签状态
  rpc UpdateLabelValueByID(UpdateLabelValueByIDRequest)returns(UpdateLabelValueByIDResponse){} // 根据 ID 更新标签值
  rpc AddLabelToUserByID(AddLabelToUserByIDRequest)returns(AddLabelToUserByIDResponse){} // 根据 ID 给指定用户添加标签
  rpc RemoveLabelFromUserByID(RemoveLabelFromUserByIDRequest)returns(RemoveLabelFromUserByIDResponse){} // 通过 ID 从指定 ID 用户身上移除标签

  // 组操作
  // 同一个用户可以存在于多个组里
  rpc CreateGroup(CreateGroupRequest)returns(CreateGroupResponse){} // 根据 ID 查询组
  rpc QueryGroups(QueryGroupsRequest)returns(QueryGroupsResponse){} // 查询全部分组
  rpc QueryGroupByID(QueryGroupByIDRequest)returns(QueryGroupByIDResponse){} // 根据 ID 查询组
  rpc DeleteGroupByID(DeleteGroupByIDRequest)returns(DeleteGroupByIDResponse){} // 根据 ID 删除组
  rpc UpdateGroupNameByID(UpdateGroupNameByIDRequest)returns(UpdateGroupNameByIDResponse){} // 根据 ID 更新组
  rpc UpdateGroupCategoryByID(UpdateGroupCategoryByIDRequest)returns(UpdateGroupCategoryByIDResponse){} // 根据 ID 更新组
  rpc UpdateGroupStateByID(UpdateGroupStateByIDRequest)returns(UpdateGroupStateByIDResponse){} // 根据 ID 更新组
  rpc UpdateGroupDescriptionByID(UpdateGroupDescriptionByIDRequest)returns(UpdateGroupDescriptionByIDResponse){} // 根据 ID 更新组

  // 组关系操作
  rpc AddUserToGroupByID(AddUserToGroupByIDRequest)returns(AddUserToGroupByIDResponse){} //添加 ID 指定的用户加入  ID 指定的组
  rpc RemoveUserFromGroupByID(RemoveUserFromGroupByIDRequest)returns(RemoveUserFromGroupByIDResponse){} // 从指定 ID 的组里移除指定 ID 的用户
}
